# stage_2025

./: .gitignore  .gitlab-ci.template.yml  .gitlab-ci.yml  README.md
.devcontainer/: Dockerfile
documentations/: git.md  install_pi.md
hosts_server/: server.py
src/aiv_interfaces/: CMakeLists.txt  package.xml
src/aiv_interfaces/action/: PositionAction.action
src/aiv_interfaces/msg/: AckMCM.msg  CAM.msg  CPM.msg  CauseCode.msg  DENM.msg  InformationQuality.msg  ItsPduHeader.msg  MCM.msg  ManagementContainer.msg  ManeuverContainer.msg  PerceiveObjectContainer.msg  SensorInformation.msg  SituationContainer.msg  StationType.msg  Vector2Goal.msg
src/fleetUpdateMngr/: fleetUpdateMngr.py
src/land_drone/: package.xml  setup.cfg  setup.py
src/land_drone/config/: config.json  hosts.json
src/land_drone/land_drone/: GPSDrv.py  Position3D.py  demarrage.py  drone1_position_control.py  exchangeMessages.py  gps.py  gyro.py  gyroDrv.py  motor.moz_20.03.2025_MDK.py  motor.py  motorDrv.py  motorDrvPitop.py  motorDrvRover.py  planner_action_client.py  planner_action_server.py  position_control.py  sonar.py  sonarDrv.py
src/land_drone/land_drone/utils/: manageFiles.py
src/land_drone/land_drone/utils/motor_handlers/: pitop_handler.py
src/land_drone/land_drone/utils/motor_lib/: encoder_motor.py  encoder_motor_controller.py  plate_interface.py  smbus_device.py
src/land_drone/launch/: communication.launch.py  sensors.launch.py
